# cuda-compile-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vadd.cu
.github/workflows/: cuda-compile.yml
